NO-ISSUE: fix(web): improve logo visibility (#5634)
this broke during the PF migration

--- a/web/src/components/header/QuayHeader.css
+++ b/web/src/components/header/QuayHeader.css
@@ -1,3 +1,4 @@
-.header-logo {
-    height: 2em;
+.pf-v6-c-masthead__logo {
+    --pf-v6-c-masthead__logo--Width: auto;
+    --pf-v6-c-masthead__logo--MaxHeight: 2rem;
 }
